<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>dk.ku.di.dms.vms</groupId>
    <artifactId>vms-runtime-java</artifactId>
    <version>1.0-SNAPSHOT</version>
  </parent>

  <artifactId>coordinator</artifactId>
  <version>1.0-SNAPSHOT</version>

  <name>coordinator</name>
  <url>https://rnlaigner.github.io/vms</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>18</maven.compiler.source>
    <maven.compiler.target>18</maven.compiler.target>
  </properties>

  <dependencies>

    <dependency>
      <groupId>dk.ku.di.dms.vms.modb</groupId>
      <artifactId>modb-common</artifactId>
      <version>1.0-SNAPSHOT</version>
      <scope>compile</scope>
    </dependency>

    <dependency>
      <groupId>dk.ku.di.dms.vms</groupId>
      <artifactId>web_common</artifactId>
      <version>1.0-SNAPSHOT</version>
      <scope>compile</scope>
<!--      <exclusions>-->
<!--        <exclusion>-->
<!--          <groupId>com.google.code.gson</groupId>-->
<!--          <artifactId>gson</artifactId>-->
<!--        </exclusion>-->
<!--      </exclusions>-->
    </dependency>

    <!-- why not using gson ? Because gson requires types to parse.
    The leader do not need to compile the event types -->

    <!-- Json API -->
<!--    <dependency>-->
<!--      <groupId>javax.json</groupId>-->
<!--      <artifactId>javax.json-api</artifactId>-->
<!--      <version>1.1</version>-->
<!--    </dependency>-->

<!--    &lt;!&ndash; Json API Implementation &ndash;&gt;-->
<!--    <dependency>-->
<!--      <groupId>org.glassfish</groupId>-->
<!--      <artifactId>javax.json</artifactId>-->
<!--      <version>1.1</version>-->
<!--    </dependency>-->

<!--    <dependency>-->
<!--      <groupId>com.googlecode.json-simple</groupId>-->
<!--      <artifactId>json-simple</artifactId>-->
<!--      <version>1.1</version>-->
<!--    </dependency>-->

  </dependencies>

</project>
